Adding main files

--- a/contact.html
+++ b/contact.html
@@ -6,66 +6,50 @@
 -->
 <html>
 	<head>
-		<title>William Meynardie</title>
+		<title>William Meynardie - Contact</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
-		<script src="https://kit.fontawesome.com/441b6f0ca2.js" crossorigin="anonymous"></script>
 	</head>
-	<body class="homepage is-preload">
+	<body class="is-preload">
 		<div id="page-wrapper">
 
-			<!-- Nav -->
-				<nav id="nav">
-					<ul>
-						<li class="current"><a href="index.html">Home</a></li>
-						<li><a href="research.html">Research</a></li>
-						<li><a href="publications.html">Publications</a></li>
-						<li><a href="contact.html">Contact</a></li>
-					</ul>
-				</nav>
+			<!-- Header -->
+				<header id="header">
+					<div class="logo container">
+						<div>
+							<h1>Contact</h1>
+						</div>
+					</div>
+				</header>
 
-			<!-- Banner -->
-				<section id="banner">
-					<div class="content">
-						<h2>William W. Meynardie</h2>
-						<p>PhD student at the University of Michigan</p>
-						<a target="_new" rel="noopener noreferrer" href="https://ui.adsabs.harvard.edu/search/p_=0&q=author%3A%22Meynardie%2C%20W.%22&sort=date%20desc%2C%20bibcode%20desc" class="button">NASA ADS</a>
-					</div>
-					<div class="credit">
-						Image credit: ESO/L. Cal&ccedil;ada
-					</div>
-				</section>
+			<!-- Nav -->
+			<nav id="nav">
+				<ul>
+					<li><a href="index.html">Home</a></li>
+					<li><a href="research.html">Research</a></li>
+					<li><a href="publications.html">Publications</a></li>
+					<li class="current"><a href="contact.html">Contact</a></li>
+				</ul>
+			</nav>
 
 			<!-- Main -->
 				<section id="main">
-					<section>
-						<div class="container">
-							<div class="row">
-								<div class="col-3 off-1 col-6-medium off-3-medium">
-									<img src="./images/portrait.jpg" alt="head" width=100% height=auto class="img-fluid" style="border-radius: 20px">
-								</div>
-								<div class="col-8 col-12-medium">
-									<div class="content">
-										<h2>About Me<h2>
-									</div>
-									<div class="content">
-										<p>
-											I am a second year Ph.D. student in the <b><a target="_new" rel="noopener noreferrer" href="https://lsa.umich.edu/astro" class=p>University of Michigan Department of Astronomy</a></b>. I am interested in exoplanets and their atmospheres, 
-											and in particular, I am interested in what exoplanet observations can tell us about the formation history of a planet.
-										</p>
-										<p>
-											For my first project as a Ph.D. student, I fit JWST observations of the widely separated substellar companion <b>Ross 458c</b> with forward models and retrievals to infer its composition. By comparing the composition to its host, we determined that its
-											composition is consistent with the host, and so it likely formed through gravitational fragmentation of the same molecular cloud that formed the host.
-										</p>
-										<p>
-											As an undergraduate at the University of Virginia, I studied Luminous InfraRed Galaxies (LIRGs) with the Great Observatories All-sky LIRG Survey (GOALS) team. As a post-bac at Caltech, I studied supernovae as a member of the Zwicky Transient Facility (ZTF).
-										</p>
-									</div>
+					<div class="container">
+						<div class="row">
+							<div class="col-12">
+								<div class="content">
+
+									<p>Do you have questions about my research? Do you want to learn more?</p>
+									
+									<p>The best way to get in contact with me is via email! I can be reached at <a href="mailto:wmeynard@umich.edu"><i>wmeynard@umich.edu</i></a>.</p>
+
+									<p>I'm also on <b><a target="_new" style="color:#317af9" href="https://bsky.app/profile/wwmeynardie.bsky.social">Bluesky</a></b>, <b><a target="_new" style="color:#04080c" href="https://github.com/wwmeynardie">GitHub</a></b>, and <b><a target="_new" style="color:#006599" href="https://www.linkedin.com/in/william-meynardie/">LinkedIn</a></b>.</p>
+
 								</div>
 							</div>
 						</div>
-					</section>
+					</div>
 				</section>
 
 <!-- Footer -->
@@ -112,19 +96,16 @@
 
     </div>
 </footer>
-</div>	
+</div>
 
 			<!-- Scripts -->
 
 			<script src="assets/js/jquery.min.js"></script>
-			<script src="assets/js/jquery.dropotron.min.js"></script>
 			<script src="assets/js/jquery.scrolly.min.js"></script>
 			<script src="assets/js/browser.min.js"></script>
 			<script src="assets/js/breakpoints.min.js"></script>
 			<script src="assets/js/util.js"></script>
 			<script src="assets/js/main.js"></script>
-
-			
 
 	</body>
 </html>
