--- a/research.html
+++ b/research.html
@@ -6,65 +6,56 @@
 -->
 <html>
 	<head>
-		<title>William Meynardie</title>
+		<title>William Meynardie - Research</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
-		<script src="https://kit.fontawesome.com/441b6f0ca2.js" crossorigin="anonymous"></script>
 	</head>
-	<body class="homepage is-preload">
+	<body class="is-preload">
 		<div id="page-wrapper">
 
-			<!-- Nav -->
-				<nav id="nav">
-					<ul>
-						<li class="current"><a href="index.html">Home</a></li>
-						<li><a href="research.html">Research</a></li>
-						<li><a href="publications.html">Publications</a></li>
-						<li><a href="contact.html">Contact</a></li>
-					</ul>
-				</nav>
+			<!-- Header -->
+				<header id="header">
+					<div class="logo container">
+						<div>
+							<h1>Research</h1>
+						</div>
+					</div>
+				</header>
 
-			<!-- Banner -->
-				<section id="banner">
-					<div class="content">
-						<h2>William W. Meynardie</h2>
-						<p>PhD student at the University of Michigan</p>
-						<a target="_new" rel="noopener noreferrer" href="https://ui.adsabs.harvard.edu/search/p_=0&q=author%3A%22Meynardie%2C%20W.%22&sort=date%20desc%2C%20bibcode%20desc" class="button">NASA ADS</a>
-					</div>
-					<div class="credit">
-						Image credit: ESO/L. Cal&ccedil;ada
-					</div>
-				</section>
+			<!-- Nav -->
+			<nav id="nav">
+				<ul>
+					<li><a href="index.html">Home</a></li>
+					<li class="current"><a href="research.html">Research</a></li>
+					<li><a href="publications.html">Publications</a></li>
+					<li><a href="contact.html">Contact</a></li>
+				</ul>
+			</nav>
 
 			<!-- Main -->
 				<section id="main">
 					<section>
-						<div class="container">
-							<div class="row">
-								<div class="col-3 off-1 col-6-medium off-3-medium">
-									<img src="./images/portrait.jpg" alt="head" width=100% height=auto class="img-fluid" style="border-radius: 20px">
-								</div>
-								<div class="col-8 col-12-medium">
-									<div class="content">
-										<h2>About Me<h2>
-									</div>
-									<div class="content">
-										<p>
-											I am a second year Ph.D. student in the <b><a target="_new" rel="noopener noreferrer" href="https://lsa.umich.edu/astro" class=p>University of Michigan Department of Astronomy</a></b>. I am interested in exoplanets and their atmospheres, 
-											and in particular, I am interested in what exoplanet observations can tell us about the formation history of a planet.
-										</p>
-										<p>
-											For my first project as a Ph.D. student, I fit JWST observations of the widely separated substellar companion <b>Ross 458c</b> with forward models and retrievals to infer its composition. By comparing the composition to its host, we determined that its
-											composition is consistent with the host, and so it likely formed through gravitational fragmentation of the same molecular cloud that formed the host.
-										</p>
-										<p>
-											As an undergraduate at the University of Virginia, I studied Luminous InfraRed Galaxies (LIRGs) with the Great Observatories All-sky LIRG Survey (GOALS) team. As a post-bac at Caltech, I studied supernovae as a member of the Zwicky Transient Facility (ZTF).
-										</p>
-									</div>
-								</div>
+					<div class="container">
+						<div class="row">
+							<div class="col-6 col-12-medium">
+								
+									<h2 class="major"><span>Ross 458c</span></h2>
+									<p>Ross 458c is a widely separated planetary mass companion at a distance of 1100 AU from its host
+										binary, Ross 458AB. We obtained high-resolution (R∼2700) emission spectra of Ross 458c with JWST NIRSpec
+										Fixed Slit in F070LP, F100LP, and F170LP filters. We fit these spectra to the Sonora Bobcat, Sonora
+										Elf Owl, and ExoREM forward models, and we retrieved atmospheric properties using the POSEIDON
+										retrieval code. The forward model grids preferred enhanced metallicity relative to the host, while the
+										retrieval preferred a metallicity consistent with the host within 1σ. The retrieval provided a much better
+										fit to the spectrum, so we inferred that Ross 458c likely formed through fragmentation of the molecular 
+										cloud that formed its host.</p>
+								
+							</div>
+							<div class="col-6 col-12-medium">
+								<img src="./figures/Ross458c.png" width=100% object-fit="contain" alt="Ross 458c Figure" class="img-fluid" style="border-radius: 20px">
 							</div>
 						</div>
+					</div>
 					</section>
 				</section>
 
@@ -112,19 +103,16 @@
 
     </div>
 </footer>
-</div>	
+</div>
 
 			<!-- Scripts -->
 
 			<script src="assets/js/jquery.min.js"></script>
-			<script src="assets/js/jquery.dropotron.min.js"></script>
 			<script src="assets/js/jquery.scrolly.min.js"></script>
 			<script src="assets/js/browser.min.js"></script>
 			<script src="assets/js/breakpoints.min.js"></script>
 			<script src="assets/js/util.js"></script>
 			<script src="assets/js/main.js"></script>
-
-			
 
 	</body>
 </html>
