Changed icons for Research and Publications

--- a/publications.html
+++ b/publications.html
@@ -108,9 +108,11 @@
                         <h2 class="major"><span>Navigation Panel</span></h2>
                         <ul class="special">
                             <li><a href="index.html" class="fa-solid fa-home"><span class="label">Home</span></a></li>
-                            <li><a href="research.html" class="fa-solid fa-rocket"><span class="label">Research</span></a></li>
-                            <li><a href="publications.html" class="fa-solid fa-file"><span class="label">Publications</span></a></li>
+                            <li class="saturn"><a href="research.html" class="saturn" aria-hidden="true"><div id="rectangle"></div>
+								<span class="label">Research</span></a></li>
+                            <li><a href="publications.html" class="fa-solid fa-book"><span class="label">Publications</span></a></li>
                             <li><a href="contact.html" class="fa-solid fa-user"><span class="label">Contact</span></a></li>
+							
                         </ul>
                     </section>
             </div>
