Added meta description

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 		<title>William Meynardie</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
+		<meta name="description" content="William W. Meynardie is an exoplanet researcher at the University of Michigan's Department of Astronomy, studying the formation of widely separated companions to nearby stars."/>
 		<link rel="stylesheet" href="assets/css/main.css" />
 		<script src="https://kit.fontawesome.com/441b6f0ca2.js" crossorigin="anonymous"></script>
 	</head>
@@ -66,6 +67,9 @@
 										</p>
 										<p>
 											As an undergraduate at the University of Virginia, I studied Luminous InfraRed Galaxies (LIRGs) with the Great Observatories All-sky LIRG Survey (GOALS) team. As a post-bac at Caltech, I studied supernovae as a member of the Zwicky Transient Facility (ZTF).
+										</p>
+										<p>
+											Outside of astronomy, I like sports, video games, and paddleboarding around Ann Arbor.
 										</p>
 									</div>
 								</div>
