Added link to first first author paper!

--- a/publications.html
+++ b/publications.html
@@ -46,7 +46,7 @@
 										<h2 class="major"><span>First Author</span></h2>
 										<ul class="divided">
 											<li>
-												<article class="box post-summary"><a href="#">
+												<article class="box post-summary"><a href="https://ui.adsabs.harvard.edu/abs/2025arXiv250922803M/abstract" target="_blank">
 													<h3>Ross 458c: Gas Giant or Brown Dwarf?</h3>
 													<ul class="meta">
 														<li><b>William W. Meynardie</b>, Michael R. Meyer, Ryan J. MacDonald, Per Calissendorff, 
