Update current status from second year to third year

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 									</div>
 									<div class="content">
 										<p>
-											I am a second year Ph.D. student in the <b><a target="_new" rel="noopener noreferrer" href="https://lsa.umich.edu/astro" class=p>University of Michigan Department of Astronomy</a></b>. I am interested in exoplanets and their atmospheres, 
+											I am a third year Ph.D. student in the <b><a target="_new" rel="noopener noreferrer" href="https://lsa.umich.edu/astro" class=p>University of Michigan Department of Astronomy</a></b>. I am interested in exoplanets and their atmospheres, 
 											and in particular, I am interested in what exoplanet observations can tell us about the formation history of a planet.
 										</p>
 										<p>
