Changed Ross 458 C name and removed .html from pages

--- a/index.html
+++ b/index.html
@@ -25,10 +25,10 @@
 			<!-- Nav -->
 				<nav id="nav">
 					<ul>
-						<li class="current"><a href="index.html">Home</a></li>
-						<li><a href="research.html">Research</a></li>
-						<li><a href="publications.html">Publications</a></li>
-						<li><a href="contact.html">Contact</a></li>
+						<li class="current"><a href="https://wwmeynardie.github.io">Home</a></li>
+						<li><a href="https://wwmeynardie.github.io/research">Research</a></li>
+						<li><a href="https://wwmeynardie.github.io/publications">Publications</a></li>
+						<li><a href="https://wwmeynardie.github.io/contact">Contact</a></li>
 					</ul>
 				</nav>
 
@@ -58,7 +58,7 @@
 									</div>
 									<div class="content">
 										<p>
-											I am a third year Ph.D. student in the <b><a target="_new" rel="noopener noreferrer" href="https://lsa.umich.edu/astro" class=p>University of Michigan Department of Astronomy</a></b>. I am interested in exoplanets and their atmospheres, 
+											I am a second year Ph.D. student in the <b><a target="_new" rel="noopener noreferrer" href="https://lsa.umich.edu/astro" class=p>University of Michigan Department of Astronomy</a></b>. I am interested in exoplanets and their atmospheres, 
 											and in particular, I am interested in what exoplanet observations can tell us about the formation history of a planet.
 										</p>
 										<p>
