--- a/research.html
+++ b/research.html
@@ -26,10 +26,10 @@
 			<!-- Nav -->
 			<nav id="nav">
 				<ul>
-					<li><a href="index.html">Home</a></li>
-					<li class="current"><a href="research.html">Research</a></li>
-					<li><a href="publications.html">Publications</a></li>
-					<li><a href="contact.html">Contact</a></li>
+					<li><a href="https://wwmeynardie.github.io">Home</a></li>
+					<li class="current"><a href="https://wwmeynardie.github.io/research">Research</a></li>
+					<li><a href="https://wwmeynardie.github.io/publications">Publications</a></li>
+					<li><a href="https://wwmeynardie.github.io/contact">Contact</a></li>
 				</ul>
 			</nav>
 
@@ -40,19 +40,19 @@
 						<div class="row">
 							<div class="col-6 col-12-medium">
 								
-									<h2 class="major"><span>Ross 458c</span></h2>
-									<p>Ross 458c is a widely separated planetary mass companion at a distance of 1100 AU from its host
-										binary, Ross 458AB. We obtained high-resolution (R∼2700) emission spectra of Ross 458c with JWST NIRSpec
+									<h2 class="major"><span>Ross 458 C</span></h2>
+									<p>Ross 458 C is a widely separated planetary mass companion at a distance of 1100 AU from its host
+										binary, Ross 458AB. We obtained high-resolution (R∼2700) emission spectra of Ross 458 C with JWST NIRSpec
 										Fixed Slit in F070LP, F100LP, and F170LP filters. We fit these spectra to the Sonora Bobcat, Sonora
 										Elf Owl, and ExoREM forward models, and we retrieved atmospheric properties using the POSEIDON
 										retrieval code. The forward model grids preferred enhanced metallicity relative to the host, while the
 										retrieval preferred a metallicity consistent with the host within 1σ. The retrieval provided a much better
-										fit to the spectrum, so we inferred that Ross 458c likely formed through fragmentation of the molecular 
+										fit to the spectrum, so we inferred that Ross 458 C likely formed through fragmentation of the molecular 
 										cloud that formed its host.</p>
 								
 							</div>
 							<div class="col-6 col-12-medium">
-								<img src="./figures/Ross458c.png" width=100% object-fit="contain" alt="Ross 458c Figure" class="img-fluid" style="border-radius: 20px">
+								<img src="./figures/Ross458c.png" width=100% object-fit="contain" alt="Ross 458 C Figure" class="img-fluid" style="border-radius: 20px">
 							</div>
 						</div>
 					</div>
