--- a/contact.html
+++ b/contact.html
@@ -26,10 +26,10 @@
 			<!-- Nav -->
 			<nav id="nav">
 				<ul>
-					<li><a href="index.html">Home</a></li>
-					<li><a href="research.html">Research</a></li>
-					<li><a href="publications.html">Publications</a></li>
-					<li class="current"><a href="contact.html">Contact</a></li>
+					<li><a href="https://wwmeynardie.github.io">Home</a></li>
+					<li><a href="https://wwmeynardie.github.io/research">Research</a></li>
+					<li><a href="https://wwmeynardie.github.io/publications">Publications</a></li>
+					<li class="current"><a href="https://wwmeynardie.github.io/contact">Contact</a></li>
 				</ul>
 			</nav>
 
