Minor edits to index and publications

--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
 											and in particular, I am interested in what exoplanet observations can tell us about the formation history of a planet.
 										</p>
 										<p>
-											For my first project as a Ph.D. student, I fit JWST observations of the widely separated substellar companion <b>Ross 458c</b> with forward models and retrievals to infer its composition. By comparing the composition to its host, we determined that its
+											For my first project as a Ph.D. student, I fit JWST observations of the widely separated substellar companion <b>Ross 458 C</b> with forward models and retrievals to infer its composition. By comparing the composition to its host, we determined that its
 											composition is consistent with the host, and so it likely formed through gravitational fragmentation of the same molecular cloud that formed the host.
 										</p>
 										<p>
