--- a/publications.html
+++ b/publications.html
@@ -55,7 +55,7 @@
 													</ul>
 													<ul></ul>
 													<ul class="meta">
-														<li>Accepted to <i>The Astrophysical Journal</i> May 2025</li>
+														<li>Published in <i>The Astrophysical Journal</i> November 2025</li>
 													</ul>
 													</a>
 												</article>
