Added link to CV

--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
 						<li class="current"><a href="https://wwmeynardie.github.io">Home</a></li>
 						<li><a href="https://wwmeynardie.github.io/research">Research</a></li>
 						<li><a href="https://wwmeynardie.github.io/publications">Publications</a></li>
+						<li><a href="https://wwmeynardie.github.io/William_Meynardie_CV.pdf">CV</a></li>
 						<li><a href="https://wwmeynardie.github.io/contact">Contact</a></li>
 					</ul>
 				</nav>
